Add swagger docs for urls app
